fix service reload after logrotation

--- a/logrotate.conf
+++ b/logrotate.conf
@@ -9,6 +9,9 @@
     rotate 7
     size 5M
     weekly
+    postrotate
+        [ ! -f /var/run/nginx.pid ] || kill -USR1 `cat /var/run/nginx.pid`
+    endscript
 }
 /home/*/zope_buildout/var/log/*.log {
     nomail
