update Server setup

--- a/logrotate.conf
+++ b/logrotate.conf
@@ -25,3 +25,15 @@
     size 5M
     weekly
 }
+/home/*/plone6/var/log/*.log {
+    nomail
+    copytruncate
+    compress
+    delaycompress
+    missingok
+    notifempty
+    sharedscripts
+    rotate 7
+    size 5M
+    weekly
+}
